--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,10 +17,22 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.18
+        go-version: 1.20
+
+    - name: Install golangci-lint
+      run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
+
+    - name: Install gosec
+      run: go install github.com/securego/gosec/v2/cmd/gosec@latest
 
     - name: Install dependencies
       run: go mod tidy
+
+    - name: Run lint
+      run: golangci-lint run
+
+    - name: Run security checks
+      run: gosec ./...
 
     - name: Run tests
       run: go test ./...
