--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,7 +23,7 @@ jobs:
       run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.45.2
 
     - name: Install gosec
-      run: go install github.com/securego/gosec/v2/cmd/gosec@latest
+      run: go install github.com/securego/gosec/v2/cmd/gosec@v2.15.0
 
     - name: Install dependencies
       run: go mod tidy
