--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,17 +19,18 @@ jobs:
       with:
         go-version: 1.18
 
+    - name: Install dependencies
+      run: go mod tidy
+
     - name: Install golangci-lint
-      run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.45.2
+      run: |
+        curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.45.2
 
     - name: Install gosec
       run: go install github.com/securego/gosec/v2/cmd/gosec@v2.15.0
 
-    - name: Install dependencies
-      run: go mod tidy
-
     - name: Run lint
-      run: golangci-lint run
+      run: golangci-lint run --timeout 10m
 
     - name: Run security checks
       run: gosec ./...
