ajustes de trat. de erros

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,9 +25,17 @@ jobs:
     - name: Install golangci-lint
       run: |
         curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.45.2
+      env:
+        GOPATH: ${{ runner.temp }}
+
+    - name: Verify golangci-lint installation
+      run: golangci-lint --version
 
     - name: Install gosec
       run: go install github.com/securego/gosec/v2/cmd/gosec@v2.15.0
+
+    - name: Verify gosec installation
+      run: gosec --version
 
     - name: Run security checks
       run: gosec ./...
