--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,15 +24,16 @@ jobs:
 
     - name: Install golangci-lint
       run: |
-        curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.45.2
-      env:
-        GOPATH: ${{ runner.temp }}
+        curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $GITHUB_WORKSPACE/bin v1.45.2
+        echo "$GITHUB_WORKSPACE/bin" >> $GITHUB_PATH
 
     - name: Verify golangci-lint installation
       run: golangci-lint --version
 
     - name: Install gosec
-      run: go install github.com/securego/gosec/v2/cmd/gosec@v2.15.0
+      run: |
+        go install github.com/securego/gosec/v2/cmd/gosec@v2.15.0
+        echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
 
     - name: Verify gosec installation
       run: gosec --version
