--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,6 +19,9 @@ jobs:
       with:
         go-version: 1.18
 
+    - name: Install Docker Compose
+      run: sudo apt-get install docker-compose
+
     - name: Install dependencies
       run: go mod tidy
 
@@ -38,19 +41,32 @@ jobs:
     - name: Build Docker image
       run: docker build -t smarters .
 
-    - name: Run Docker container
-      run: docker run -d -p 8080:8080 --name smarters smarters
+    - name: Create Docker Compose file
+      run: |
+        echo "version: '3.8'" > docker-compose.yml
+        echo "services:" >> docker-compose.yml
+        echo "  smarters:" >> docker-compose.yml
+        echo "    image: smarters" >> docker-compose.yml
+        echo "    ports:" >> docker-compose.yml
+        echo "      - '8080:8080'" >> docker-compose.yml
+
+    - name: Start Docker Compose
+      run: docker-compose up -d
 
     - name: Wait for the server to be ready
       run: |
+        set -e
         until curl --output /dev/null --silent --fail http://localhost:8080; do
           echo 'Waiting for server...'
           sleep 2
         done
-      shell: bash
+        echo 'Server is up and running!'
 
     - name: Run tests
       run: go test ./...
 
+    - name: Display Docker logs
+      run: docker-compose logs
+
     - name: Clean up
-      run: docker rm -f smarters
+      run: docker-compose down
