--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,7 +20,7 @@ jobs:
         go-version: 1.18
 
     - name: Install Docker Compose
-      run: sudo apt-get install docker-compose
+      run: sudo apt-get update && sudo apt-get install -y docker-compose
 
     - name: Install dependencies
       run: go mod tidy
