--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -56,9 +56,17 @@ jobs:
     - name: Wait for the server to be ready
       run: |
         set -e
+        TIMEOUT=120
+        INTERVAL=5
         until curl --output /dev/null --silent --fail http://localhost:8080; do
           echo 'Waiting for server...'
-          sleep 2
+          sleep $INTERVAL
+          TIMEOUT=$((TIMEOUT - INTERVAL))
+          if [ $TIMEOUT -le 0 ]; then
+            echo "Server failed to start in the expected time. Displaying Docker logs:"
+            docker-compose logs
+            exit 1
+          fi
         done
         echo 'Server is up and running!'
 
